--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "build": "browserify views/main.js -o public/dist/bundle.js -t [ babelify --presets [ es2015 react ] ]"
+    "build": "browserify views/main.js -o public/dist/bundle.js -t [ babelify --presets [ es2015 react stage-0 ] ]"
   },
   "author": "",
   "license": "ISC",
@@ -15,6 +15,7 @@
     "alt-utils": "^1.0.0",
     "babel-preset-es2015": "^6.3.13",
     "babel-preset-react": "^6.3.13",
+    "babel-preset-stage-0": "^6.3.13",
     "babelify": "^7.2.0",
     "browserify": "^12.0.1",
     "react": "^0.14.3",
