--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "build": "browserify views/main.js -o public/dist/bundle.js -t [ babelify --presets [ es2015 react stage-0 ] ]"
+    "build": "browserify views/main.js -o public/dist/bundle.js -t [ babelify --presets [ es2015 react stage-0 ] ]",
+    "start": "http-server"
   },
   "author": "",
   "license": "ISC",
@@ -18,6 +19,7 @@
     "babel-preset-stage-0": "^6.3.13",
     "babelify": "^7.2.0",
     "browserify": "^12.0.1",
+    "http-server": "^0.8.5",
     "react": "^0.14.3",
     "react-dom": "^0.14.3"
   }
